# fourcast

./: .env.example  .env.local.example  .eslintrc.json  .gitignore  .npmrc  ARCHITECTURE_REFACTOR.md  CHANGES.md  HACKATHON_CHECKLIST.md  IMPROVEMENTS.md  LICENSE  README.md  SECURITY.md  TESTNET_DEPLOYMENT.md  TXLINE_SUBMISSION.md  UI_UX_Advisory_Report.md  design.md  lighthouserc.json  next.config.js  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  tokens.css  tsconfig.json  vercel.json  vitest.config.js
.hallmark/: log.json
app/: CantonWalletLayer.js  SolanaWalletLayer.js  WalletLayer.js  WeatherPage.js  WeatherPage.refactored.js  error.js  global-error.js  layout.js  not-found.js  page.js  providers.js  template.jsx
bot/: ecosystem.config.cjs  index.js  spectrum.js
canton/: daml.yaml
components/: AIInsightsPanel.js  AITriggerButton.js  ActiveChainIndicator.js  AgentDashboard.js  AgentRunLedger.js  AnalysisConfigModal.js  AnalysisOptions.js  AnimatedBackground.js  ArbitrageExecutionPanel.js  ArbitrageExecutor.js  AutopilotDashboard.js  BYOKSettings.js  BottomSheet.js  BuilderBadge.js  BuilderDashboard.js  BuilderStats.js  CantonSettlementHub.js  CardScene.js  CarouselLanding.js  CctpTransfer.js  ChainSelector.js  ConditionalChrome.js  DecisionDossier.js  EmptyMarketState.js  EvidenceBlock.js  FirstRunBanner.js  (+48 more)
onchain/match-escrow/: Anchor.toml  Cargo.toml
onchain/match-escrow/programs/match-escrow/: Cargo.toml
onchain/match-escrow/programs/match-escrow/src/: lib.rs
onchain/match-escrow/tests/: match-escrow.ts
(+451 files in other folders)
