[workspace]
members = [
    "programs/*"
]
resolver = "2"

[workspace.dependencies]
anchor-lang = "0.30.1"

# Pin zeroize_derive to a version that doesn't require edition2024 (rust 1.85+).
# The Solana platform-tools rust is 1.84.0 which can't build edition2024 crates.
[workspace.dependencies.zeroize]
version = "=1.4.3"
[workspace.dependencies.zeroize_derive]
version = "=1.4.3"

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
